--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 				<!-- Three -->
 					<section id="three">
 						<ul class="actions">
-							<li><a href="File/mycv.pdf" target="_blank" class="button" download><strong
+							<li><a href="File/DilshanCV.pdf" target="_blank" class="button" download><strong
 										style="color:  rgb(42, 161, 121);">RESUME</strong> </a></li>
 						</ul>
 						<h2 style="color: rgb(182, 152, 31);">Get In Touch</h2>
