--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 									<ul>
 										<li>Laravel Framework</li>
 										<li>Dotnet Framework</li>
+										<li>React Native</li>
 										<li>C#, Java, Python, C, PHP Programming Languages</li>
 										<li>Tailwind CSS & Boostrap</li>
 										<li>Java Script, HTML, CSS</li>
