--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 						<header class="major">
 							<h2 style="color: rgb(182, 152, 31);">Who am I?</h2>
 							<p>I am an undergraduate student pursuing <strong style="color: rgb(42, 161, 121);">BSC(hons) in Software Engineering</strong> at NSBM Green University(2020 - present)
-								and currently working as a <strong style="color: rgb(42, 161, 121);">Trainee  Software Engineer</strong>
+								and currently working as a <strong style="color: rgb(42, 161, 121);">Associate  Software Engineer</strong>
 								at Binary Technologies International. In my role, I am responsible for the development and testing of 
-								<strong style="color: rgb(42, 161, 121);">ASP.NET and Laravel-based </strong> applications. This entails handling various tasks related to these frameworks, 
+								<strong style="color: rgb(42, 161, 121);">ASP.NET, React Native and Laravel </strong> based applications. This entails handling various tasks related to these frameworks, 
 								ensuring efficient and effective software development processes.</p>
 						</header>
 						<p>
