--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 						
 							<div class="row">
 								<div class="col-12 col-12-xsmall">
-									<h4 style="color: rgb(42, 161, 121);">Trainee Software Engineer at <a href="https://binarytechnologies.io/" target="_blank"> Binary Technologies International</a> (2023 February - present)</h4>
+									<h4 style="color: rgb(42, 161, 121);">Associate Software Engineer at <a href="https://binarytechnologies.io/" target="_blank"> Binary Technologies International</a> (2023 February - present)</h4>
 									<blockquote>Since February 2023, I have been gaining valuable experience as a Trainee Software Engineer. 
-										I have worked extensively with the .NET framework and Laravel framework, following agile methodologies 
+										I have worked extensively with the .NET framework, Laravel framework, and also React Native following agile methodologies 
 										and utilizing GitHub for version control. My skill set includes JavaScript, C#, PHP, IIS server, XAMPP, 
 										SQL Server, and MySQL. Alongside development, I also maintain comprehensive test cases reports to ensure 
 										quality assurance in my projects. This diverse experience has provided me with a
